# SOICT_Door2Door2

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
data/: 10.10.1.txt  10.10.2.txt  10.10.3.txt  10.10.4.txt  10.20.1.txt  10.20.2.txt  10.20.3.txt  10.20.4.txt  10.5.1.txt  10.5.2.txt  10.5.3.txt  10.5.4.txt  100.10.1.txt  100.10.2.txt  100.10.3.txt  100.10.4.txt  100.20.1.txt  100.20.2.txt  100.20.3.txt  100.20.4.txt  100.30.1.txt  100.30.2.txt  100.30.3.txt  100.30.4.txt  100.40.1.txt  100.40.3.txt  100.40.4.txt  12.10.1.txt  12.10.2.txt  12.10.3.txt  12.10.4.txt  12.20.1.txt  12.20.2.txt  12.20.3.txt  12.20.4.txt  12.5.1.txt  12.5.2.txt  12.5.3.txt  12.5.4.txt  150.10.1.txt  (+60 more)
data/20percent/: 10.10.1.txt  10.10.2.txt  10.10.3.txt  10.10.4.txt  10.20.1.txt  10.20.2.txt  10.20.3.txt  10.20.4.txt  10.5.1.txt  10.5.2.txt  10.5.3.txt  10.5.4.txt  100.10.1.txt  100.10.2.txt  100.10.3.txt  100.10.4.txt  100.20.1.txt  100.20.2.txt  100.20.3.txt  100.20.4.txt  100.40.1.txt  100.40.2.txt  100.40.4.txt  150.10.1.txt  150.10.2.txt  150.10.3.txt  150.10.4.txt  150.20.1.txt  150.20.2.txt  150.20.3.txt  150.20.4.txt  150.30.1.txt  150.30.2.txt  150.30.4.txt  150.40.1.txt  20.10.1.txt  20.10.2.txt  20.10.3.txt  20.10.4.txt  20.20.1.txt  (+53 more)
data/30percent/: 10.10.1.txt  10.10.2.txt  10.10.3.txt  10.10.4.txt  10.20.1.txt  10.20.2.txt  10.20.3.txt  10.20.4.txt  10.5.1.txt  10.5.2.txt  (+72 more)
src/: Config.cpp  Config.h  Input.cpp  Input.h  LocalSearch.cpp  LocalSearch.h  Random.h  Score.cpp  Score.h  Solution.cpp  Solution.h  TabuSearch.cpp  TabuSearch.h  Utils.cpp  Utils.h
(+36 files in other folders)
